--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,364 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="favicon" href="./images/favicon/favicon.ico">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <img
+        src="./images/1200px-Girl_from_Podolye_by_V.Tropinin_(b.png"
+        alt="girl from podillya"
+        class="header__img-most"
+      >
+      <img
+        src="./images/1359385793.png"
+        alt="boy with paleetra"
+        class="header__img-second"
+      >
+      <nav class="header__nav">
+        <div class="header__visite">
+          <p class="header__work-time">Розклад сьогодні 12:00 - 19:00</p>
+          <p class="header__adress">Адреса:  <br> Київ, вул. М. Грушевського, 6</p>
+        </div>
+        <input
+          type="checkbox"
+          id="burger"
+          class="header__toggler"
+        >
+        <label for="burger" class="header__chekbutton">
+          <img src="./images/Hamburger_icon.svg" alt="hidden menu">
+        </label>
+        <ul>
+          <li>Спланувати візит</li>
+          <li>Виставки та події</li>
+          <li>Колекція</li>
+        </ul>
+      </nav>
+
+      <div class="header__language" >
+        <input
+          type="checkbox"
+          id="language"
+          class="header__lan-check"
+        >
+        <label for="language" class="header__lang-label">
+          <input
+            type="button"
+            class="header__lang-ukr"
+            value="ua"
+          >
+          <input
+            type="button"
+            class="header__lang-rus"
+            value="rus"
+          >
+        </label>
+      </div>
+      <label for="ticket">
+        <a
+          href="https://kontramarka.ua/ru/pages/cash-desks"
+          id="ticket"
+          class="header__ticket"
+        >
+          Купити квіток
+        </a>
+      </label>
+      <label for="member">
+        <a
+          href="#"
+          id="member"
+          class="header__member"
+        >
+          Стати членом
+        </a>
+      </label>
+      <span class="header_org">NAMU</span>
+      <div class="header__text text">
+        <p class="text__duration-1">10 серпня - 10 листопада</p>
+        <p class="text__name-1">Мистецтво</p>
+        <p class="text__name-2">ХІХ - ХХ ст.</p>
+        <p class="text__about">Внесок українських митців у світову культуру 19-20ст</p>
+        <p class="text__duration-2">10.08 - 10.10</p>
+      </div>
+      <span class="header__picture-name">Дівчина з Поділля  В.Тропінін </span>
+    </header>
+
+    <section class="exhibition">
+      <h1 class="exhibition__title">Актуальні виставки</h1>
+
+      <div class="ex-card exhibition__first">
+        <div class="ex-card__container-img ex-card__container--order">
+          <img
+            src="./images/234_belm3506_1_large.png"
+            alt="angel sculpture"
+            class="ex-card__image-11"
+          >
+        </div>
+        <div class="ex-card__container-text">
+          <h2 class="ex-card__date ex-card__date--1">11.07 - 22.09</h2>
+          <h3 class="ex-card__title">Кураторська виставка "Ангели"</h3>
+          <p class="ex-card__text">
+            Виставковий проект &laquo;Ангели&raquo;
+            знакова подія для української культури і водночас наймасштабніший...
+          </p>
+          <label for="ticket-1" class="ex-card__item">
+            <a
+              href="#"
+              class="ex-card__link"
+              id="ticket-1"
+            >
+              Купити квіток
+            </a>
+          </label>
+        </div>
+      </div>
+
+      <div class="ex-card exhibition__second">
+        <div class="ex-card__container-img ex-card__container-img--2">
+          <img
+            src="./images/1243603241.png"
+            alt="lovers picture"
+            class="ex-card__image-21"
+          >
+        </div>
+        <div class="ex-card__container-text ex-card__container-text--2">
+          <h2 class="ex-card__date">Діє постійно</h2>
+          <h3 class="ex-card__title">Мистецтво ХХ ст. - ХХІ ст.</h3>
+          <p class="ex-card__text">
+            Знакові роботи Алли Горської, Миколи Самошкиша, Федора Кричевського
+            та інших митців.
+          </p>
+          <label for="ticket-2" class="ex-card__item">
+            <a
+              href="#"
+              class="ex-card__link"
+              id="ticket-2"
+            >
+              Купити квіток
+            </a>
+          </label>
+        </div>
+      </div>
+
+      <div class="ex-card exhibition__third">
+        <div class="ex-card__container-img ex-card__container-img--3">
+          <img
+          src="./images/3354.png"
+          alt="musition picture"
+          class="ex-card__image-31"
+          >
+
+        </div>
+        <div class="ex-card__container-text">
+          <h2 class="ex-card__date">Діє постійно</h2>
+          <h3 class="ex-card__title">Стародавнє мистецтво</h3>
+          <p class="ex-card__text">
+            Визначні приклади стародавнього українського іконопису та живопису
+          </p>
+          <label for="ticket-3" class="ex-card__item">
+            <a
+              href="#"
+              class="ex-card__link"
+              id="ticket-3"
+            >
+             Купити квіток
+            </a>
+          </label>
+        </div>
+      </div>
+      <a href="#" class="exhibition__link">Архів виставок</a>
+    </section>
+
+    <section class="future">
+      <h1 class="future__title">Найближчі події</h1>
+      <div class="fcard future__card-1">
+        <span class="fcard__date">14.08</span>
+        <div class="fcard__container">
+          <span class="fcard__type">Екскурсія</span>
+          <h2 class="fcard__title">
+            Кураторські екскурсії від Павла Гудімова
+          </h2>
+          <p class="fcard__text">
+            Таємниці підготовки, історії експонатів, магія дійства
+            до і в момент вашої присутності - розгортатиметься...
+          </p>
+          <a href="#" class="fcard__link">Зареєструватись</a>
+        </div>
+          <img
+            src="./images/Rectangle 2.1.png"
+            alt="pavlo gudimov foto"
+            class="fcard__foto"
+          >
+      </div>
+
+      <div class="fcard future__card-2">
+        <span class="fcard__date">18.08</span>
+        <div class="fcard__container">
+          <span class="fcard__type">Майстер-клас</span>
+          <h2 class="fcard__title">
+            Подорож до Австралії
+          </h2>
+          <p class="fcard__text">
+            Цієї неділі о 14:00 на арт-мандрівників чекає останній пункт
+            кругосвітньої подорожі - Австралія.
+          </p>
+          <a href="#" class="fcard__link">Зареєструватись</a>
+        </div>
+        <img
+           src="./images/Rectangle 2.4.png"
+            alt="pavlo gudimov foto"
+            class="fcard__foto fcard__foto--order"
+        >
+      </div>
+
+
+      <a href="#" class="future__calendar">Календар подій</a>
+    </section>
+
+    <section class="visit-us">
+      <img
+        src="./images/к.png"
+        alt="woman painted"
+        class="visit-us__img"
+      >
+      <h1 class="visit-us__title">Сплануйте візит до музею <h1>
+      <p class="visit-us__text">
+        Оберіть зручний день, зареєструйтесь на події, що цікавлять,
+        купіть квиток заздалегіть, щоб ніщо не завадило вам насолоджуватись  мистецтвом
+      </p>
+      <label for="visit-link" class="visit-us__item">
+        <a
+          href="#foo"
+          class="visit-us__link"
+          id="visit-link"
+        >
+          Почати
+        </a>
+      </label>
+    </section>
+
+    <section class="news">
+      <span class="news__title"> Новини </span>
+      <div class="news__container">
+        <div class="news-card news__card-1">
+          <img
+            src="./images/Rectangle 3-3.png"
+            alt="exhibition foto"
+            class="news-card__image"
+          >
+          <span  class="news-card__date">9 серпня 2019</span>
+          <span class="news-card__title"><strong>Оголошення переможця</strong> </span>
+          <p class="news-card__text">
+            Друзі, сьогодні п'ятниця! А це означає, що час
+            оголосити  переможця розіграшу...
+          </p>
+        </div>
+        <div class="news-card news__card-2">
+          <img
+            src="./images/Rectangle 3-1.png"
+            alt="exhibition foto"
+            class="news-card__image"
+          >
+          <span class="news-card__date">9 серпня 2019</span>
+          <span class="news-card__title"><strong>Міжнародний день котів</strong> </span>
+          <p class="news-card__text">
+            Музей з левами не може просто так взяти і
+            пропустити Міжнародний день котів!
+          </p>
+        </div>
+        <div class="news-card news__card-3">
+          <img
+            src="./images/Rectangle 3-2.png"
+            alt="exhibition foto"
+            class="news-card__image"
+          >
+          <span  class="news-card__date">9 серпня 2019</span>
+          <span class="news-card__title"><strong>200 років П. Кулішу</strong> </span>
+          <p class="news-card__text">
+            Поруч із тарасом Шевченком це наважливіша постать
+            в українській культурі ХІХ століття...
+          </p>
+        </div>
+      </div>
+      <a href="#" class="news__link">Усі новини</a>
+    </section>
+
+    <section class="daigest">
+      <h1 class="daigest__title">Підпишіться на дайджест</h1>
+      <div class="daigest__box">
+        <p class="daigest__text">
+          Першими дізнавайтесь про новини музею та розіграші,
+          отримуйте  запрошення на події та читайте статті від кураторів
+        </p>
+        <form
+          class="daigest__form"
+          action="mail.php"
+          method="POST"
+        >
+          <input
+            type="email"
+            name="mail"
+            class="daigest__email"
+            placeholder="e-mail"
+            required
+          >
+        </form>
+      </div>
+    </section>
+
+    <footer class="footer" id="foo">
+      <div class="contacts">
+        <h2 class="contacts__title">Контакти</h2>
+        <span class="contacts__adress">
+          Київ <br>
+          вул. М. Грушевського, 6
+          тел. 278-13-57
+        </span>
+        <span class="contacts__phone">278-74-54</span>
+        <span class="contacts__mail">info@namu.kiev.ua</span>
+
+        <div class="contacts__container">
+          <a href="#" class="contacts__facebook">
+            <img src="./images/Vector.png" alt="facebook">
+          </a>
+          <a href="#" class="contacts__twitter">
+            <img src="./images/Vector 2.png" alt="twitter">
+          </a>
+          <a href="#" class="contacts__telegram">
+            <img src="./images/Vector (1).png" alt="telegram">
+          </a>
+          <a href="#" class="contacts__instagram">
+            <img src="./images/Vector 3.png" alt="instagram">
+          </a>
+        </div>
+      </div>
+      <div class="work-time">
+        <h2 class="work-time__title">Розклад роботи</h2>
+        <div class="work-time__container">
+          <span class="work-time__day"> пн вт ср чт пт сб нд</span>
+          <span class="work-time__time">вихідний вихідний 10:00-17:00 10:00-17:00 10:00-19:00 10:00-18:00 10:00-17:00</span>
+        </div>
+      </div>
+      <div class="membership">
+        <h2 class="membership__title">Членські програми</h2>
+        <a href="#" class="membership__cash">Зробити разовий внесок</a>
+        <a href="#" class="membership__individual-cash">Індивідуальна</a>
+        <a href="#" class="membership__corporate-cash">Корпоративна</a>
+      </div>
+      <div class="about-us">
+        <h2 class="about-us__title">Про нас</h2>
+        <a href="#" class="about-us__history">Історія</a>
+        <a href="#" class="about-us__museum">Обличчя музею</a>
+        <a href="#" class="about-us__hire">Вакансії</a>
+        <a href="#" class="about-us__news">Новини</a>
+      </div>
+      <div class="footer__underrights">
+        <span class="footer__copyright" >©2010 - 2020</span>
+        <a href="#" class="footer__privacy" >Privacy - Terms</a>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
