--- a/src/index.html
+++ b/src/index.html
@@ -5,59 +5,225 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;800&display=swap" rel="stylesheet">
   </head>
   <body>
     <header class="header">
     </header>
-
     <div class="title">
       <div class="title__logo logo"></div>
       <p class="title__heading">худож<span class="title__heading--opacity">ній</span><br>музей</p>
-      <div class="title_img-size">
-        <img
-          class="title__img"
-          src="../src/images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.jpg"
-          alt="...."
-          >
-        </img>
-      </div>
-      <div class="title__ticket">
+      <img
+        class="title__img"
+        src="../src/images/titlebig.jpg"
+        alt="...."
+      >
+      <img
+        class="title__img-mid"
+        src="../src/images/titlemid.jpg"
+        alt="...."
+      >
+      <div class="title__ticket ticket">
         квитки
         <button type="submit" class="title__button button">></button>
       </div>
       <p class="title__mark mark">події</p>
+      <div class="title__bottom">
+        <p class="title__heading-bottom">художнiй<br>музей</p>
+        <div class="title__ticket-bottom ticket">
+          квитки
+          <button type="submit" class="title__button button">></button>
+        </div>
+      </div>
     </div>
-    <div class="events">
-      <div class="events__title">Актуальні події</div>
+    <section class="events">
+      <div class="events__title heading-section">Актуальні події</div>
       <section class="events__element">
         <img
           class="events__img"
           src="images/events/1.jpg"
           alt="картина пейзаж"
-          >
+        >
+        <img
+          class="events__img--hidden"
+          src="images/events/1big.jpg"
+          alt="картина пейзаж"
+        >
         <div class="events__info">
-          <div class="events__mark">виставка</div>
-          <div class="events__date">26.08-29.11.2019</div>
-          <h2 class="events__heading">Йду і повертаюсь</h2>
+          <div class="events__mark mark">виставка</div>
+          <div class="events__date date">26.08-29.11.2019</div>
+          <p class="events__heading heading-info">Йду і повертаюсь</p>
           <p class="events__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
         </div>
       </section>
       <section class="events__element">
         <div class="events__info">
-          <div class="events__mark">виставка</div>
-          <div class="events__date">26.08-29.11.2019</div>
-          <h2 class="events__heading">І спогади і мрії</h2>
+          <div class="events__mark mark">виставка</div>
+          <div class="events__date date">26.08-29.11.2019</div>
+          <p class="events__heading heading-info">І спогади і мрії</p>
           <p class="events__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
         </div>
         <img
           class="events__img"
           src="images/events/2.jpg"
-          alt="картина дiвчини з павлiном"
-          >
+          alt="картина дiвчинa з павлiном"
+        >
+        <img
+          class="events__img--hidden"
+          src="images/events/2big.jpg"
+          alt="картина пейзаж"
+        >
       </section>
-    </div>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    </section>
+    <section class="lecture">
+      <img
+        src="../src/images/lecture.jpg"
+        alt="пейзаж"
+        class="lecture__img"
+      >
+      <div class="lecture__anons">
+        <div class="lecture__mark mark">лекцiя</div>
+        <div class="lecture__date date">26/08/2019-11:00</div>
+        <p class="lecture__heading">Від класицизму до романтизму</p>
+      </div>
+    </section>
+    <section class="gallery">
+      <div class="gallery__title heading-section">Галерея</div>
+      <div class="gallery__picture-top">
+        <img
+          class="gallery__img"
+          src="../src/images/gallery/1.jpg"
+          alt="....."
+        >
+        <img
+          class="gallery__img"
+          src="../src/images/gallery/2.jpg"
+          alt="....."
+        >
+        <img
+          class="gallery__img gallery__img--hidden"
+          src="../src/images/gallery/2.1.jpg"
+          alt="....."
+        >
+      </div>
+      <div class="gallery__picture-bottom">
+        <img
+          class="gallery__img"
+          src="../src/images/gallery/3.jpg"
+          alt="....."
+        >
+        <img
+          class="gallery__img"
+          src="../src/images/gallery/4.jpg"
+          alt="......."
+        >
+        <img
+          class="gallery__img gallery__img--hidden"
+          src="../src/images/gallery/4.1.jpg"
+          alt="....."
+        >
+      </div>
+      <button type="submit" class="gallery__button button">></button>
+    </section>
+    <section class="subscription">
+      <h2 class="subscription__heading">Пiдписка</h2>
+      <p class="subscription__info">Бути в курсі всіх актуальних подій та останніх новин.</p>
+      <form class="subscription__form">
+        <label for="subscription">
+          <input
+            type="email"
+            class="subscription__input"
+            id="subscription"
+            name="subscription"
+            placeholder="E-mail">
+        </label>
+        <button type="submit" class="title__button button button--orange">></button>
+      </form>
+    </section>
+    <footer class="footer">
+      <div class="footer__logo">
+        <img
+          src="../src/images/NA_MU.png"
+          alt="logo"
+          class="logo"
+        >
+        <div class="footer__socials">
+          <img src="../src/images/Facebook.png" alt="logo facebook">
+          <img src="../src/images/Insta.png" alt="logo instagram">
+        </div>
+      </div>
+      <div class="footer__schedule">
+        <p class="footer__heading">Графік роботи</p>
+        <p class="footer__info">
+          <span class="footer__bold">12:00 — 20:00</span> середа
+          <span class="footer__bold">12:00 — 20:00</span> четвер
+          <span class="footer__bold">12:00 — 20:00</span> п’ятниця
+          <span class="footer__bold">11:00 — 19:00</span> субота
+          <span class="footer__bold">11:00 — 19:00</span> неділя
+        </p>
+        <p>
+          Вихідні понеділок, вівторок
+          Каса припиняє роботу за 1 годину
+          до закриття музею
+        </p>
+      </div>
+      <div class="footer__contacts">
+        <p class="footer__heading">Контакти:</p>
+        <p class="footer__info">
+          вул. М. Грушевського, 6; Київ, 01001
+          тел. +38 (044) 278-13-57
+          факс +38 (044) 278-74-54
+          e-mail: info@namu.kiev.ua
+        </p>
+      </div>
+      <nav class="footer__nav nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link" href="#">
+              Галерея
+            </a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">
+              Виставки та події
+            </a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">
+              Відвідування
+            </a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">
+              Стати нашим другом
+            </a>
+          </li>
+        </ul>
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link" href="#">
+              Про Нас
+            </a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">
+              Магазин
+            </a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">
+              Блог
+            </a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">
+              Контакти
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
+    <!--    <script type="text/javascript" src="scripts/main.js"></script>-->
   </body>
 </html>
