--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,50 @@
   </head>
   <body>
     <header class="header">
+      <nav class="header__nav nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link" href="#">
+              Галерея
+            </a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">
+              Виставки та події
+            </a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">
+              Відвідування
+            </a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">
+              Стати нашим другом
+            </a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">
+              Про Нас
+            </a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">
+              Магазин
+            </a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">
+              Блог
+            </a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">
+              Контакти
+            </a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <div class="title">
       <div class="title__logo logo"></div>
@@ -177,47 +221,47 @@
           e-mail: info@namu.kiev.ua
         </p>
       </div>
-      <nav class="footer__nav nav">
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a class="nav__link" href="#">
+      <nav class="footer__nav">
+        <ul class="footer__list">
+          <li class="footer__item">
+            <a class="footer__link" href="#">
               Галерея
             </a>
           </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#">
+          <li class="footer__item">
+            <a class="footer__link" href="#">
               Виставки та події
             </a>
           </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#">
+          <li class="footer__item">
+            <a class="footer__link" href="#">
               Відвідування
             </a>
           </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#">
+          <li class="footer__item">
+            <a class="footer__link" href="#">
               Стати нашим другом
             </a>
           </li>
         </ul>
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a class="nav__link" href="#">
+        <ul class="footer__list">
+          <li class="footer__item">
+            <a class="footer__link" href="#">
               Про Нас
             </a>
           </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#">
+          <li class="footer__item">
+            <a class="footer__link" href="#">
               Магазин
             </a>
           </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#">
+          <li class="footer__item">
+            <a class="footer__link" href="#">
               Блог
             </a>
           </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#">
+          <li class="footer__item">
+            <a class="footer__link" href="#">
               Контакти
             </a>
           </li>
