add burger menu

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,13 @@
   <body>
     <header class="header">
       <nav class="header__nav nav">
+        <input
+          type="checkbox"
+          class="nav__toggler"
+          id="nav-toggler"
+        >
+        <label class="nav__toggler-label" for="nav-toggler"></label>
+
         <ul class="nav__list">
           <li class="nav__item">
             <a class="nav__link" href="#">
@@ -182,7 +189,7 @@
             name="subscription"
             placeholder="E-mail">
         </label>
-        <button type="submit" class="title__button button button--orange">></button>
+        <button type="submit" class="subscription__button button button--orange">></button>
       </form>
     </section>
     <footer class="footer">
