--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,6 @@
           id="nav-toggler"
         >
         <label class="nav__toggler-label" for="nav-toggler"></label>
-
         <ul class="nav__list">
           <li class="nav__item">
             <a class="nav__link" href="#">
@@ -104,7 +103,7 @@
         <div class="events__info">
           <div class="events__mark mark">виставка</div>
           <div class="events__date date">26.08-29.11.2019</div>
-          <p class="events__heading heading-info">Йду і повертаюсь</p>
+          <p class="events__heading">Йду і повертаюсь</p>
           <p class="events__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
         </div>
       </section>
@@ -112,7 +111,7 @@
         <div class="events__info">
           <div class="events__mark mark">виставка</div>
           <div class="events__date date">26.08-29.11.2019</div>
-          <p class="events__heading heading-info">І спогади і мрії</p>
+          <p class="events__heading">І спогади і мрії</p>
           <p class="events__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
         </div>
         <img
@@ -140,7 +139,7 @@
       </div>
     </section>
     <section class="gallery">
-      <div class="gallery__title heading-section">Галерея</div>
+      <div class="gallery__title">Галерея</div>
       <div class="gallery__picture-top">
         <img
           class="gallery__img"
@@ -178,7 +177,7 @@
       <button type="submit" class="gallery__button button">></button>
     </section>
     <section class="subscription">
-      <h2 class="subscription__heading">Пiдписка</h2>
+      <p class="subscription__heading">Пiдписка</p>
       <p class="subscription__info">Бути в курсі всіх актуальних подій та останніх новин.</p>
       <form class="subscription__form">
         <label for="subscription">
@@ -275,6 +274,5 @@
         </ul>
       </nav>
     </footer>
-    <!--    <script type="text/javascript" src="scripts/main.js"></script>-->
   </body>
 </html>
