--- a/src/index.html
+++ b/src/index.html
@@ -19,22 +19,22 @@
         <label class="nav__toggler-label" for="nav-toggler"></label>
         <ul class="nav__list">
           <li class="nav__item">
-            <a class="nav__link" href="#">
+            <a class="nav__link" href="#gallery">
               Галерея
             </a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#">
+            <a class="nav__link" href="#events">
               Виставки та події
             </a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#">
+            <a class="nav__link" href="#lecture">
               Відвідування
             </a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#">
+            <a class="nav__link" href="#subscription">
               Стати нашим другом
             </a>
           </li>
@@ -54,14 +54,14 @@
             </a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#">
+            <a class="nav__link" href="#contacts">
               Контакти
             </a>
           </li>
         </ul>
       </nav>
     </header>
-    <div class="title">
+    <section class="title" id="title">
       <div class="title__logo logo"></div>
       <p class="title__heading">худож<span class="title__heading--opacity">ній</span><br>музей</p>
       <img
@@ -86,8 +86,8 @@
           <button type="submit" class="title__button button">></button>
         </div>
       </div>
-    </div>
-    <section class="events">
+    </section>
+    <section class="events" id="events">
       <div class="events__title heading-section">Актуальні події</div>
       <section class="events__element">
         <img
@@ -126,7 +126,7 @@
         >
       </section>
     </section>
-    <section class="lecture">
+    <section class="lecture" id="lecture">
       <img
         src="../src/images/lecture.jpg"
         alt="пейзаж"
@@ -138,7 +138,7 @@
         <p class="lecture__heading">Від класицизму до романтизму</p>
       </div>
     </section>
-    <section class="gallery">
+    <section class="gallery" id="gallery">
       <div class="gallery__title">Галерея</div>
       <div class="gallery__picture-top">
         <img
@@ -176,15 +176,15 @@
       </div>
       <button type="submit" class="gallery__button button">></button>
     </section>
-    <section class="subscription">
+    <section class="subscription" id="subscription">
       <p class="subscription__heading">Пiдписка</p>
       <p class="subscription__info">Бути в курсі всіх актуальних подій та останніх новин.</p>
       <form class="subscription__form">
-        <label for="subscription">
+        <label for="email">
           <input
             type="email"
             class="subscription__input"
-            id="subscription"
+            id="email"
             name="subscription"
             placeholder="E-mail">
         </label>
@@ -219,7 +219,7 @@
         </p>
       </div>
       <div class="footer__contacts">
-        <p class="footer__heading">Контакти:</p>
+        <p class="footer__heading" id="contacts">Контакти:</p>
         <p class="footer__info">
           вул. М. Грушевського, 6; Київ, 01001
           тел. +38 (044) 278-13-57
@@ -230,22 +230,22 @@
       <nav class="footer__nav">
         <ul class="footer__list">
           <li class="footer__item">
-            <a class="footer__link" href="#">
+            <a class="footer__link" href="#gallery">
               Галерея
             </a>
           </li>
           <li class="footer__item">
-            <a class="footer__link" href="#">
+            <a class="footer__link" href="#events">
               Виставки та події
             </a>
           </li>
           <li class="footer__item">
-            <a class="footer__link" href="#">
+            <a class="footer__link" href="#lecture">
               Відвідування
             </a>
           </li>
           <li class="footer__item">
-            <a class="footer__link" href="#">
+            <a class="footer__link" href="#subscription">
               Стати нашим другом
             </a>
           </li>
@@ -267,7 +267,7 @@
             </a>
           </li>
           <li class="footer__item">
-            <a class="footer__link" href="#">
+            <a class="footer__link" href="#contacts">
               Контакти
             </a>
           </li>
