fix working time

--- a/src/index.html
+++ b/src/index.html
@@ -188,7 +188,7 @@
             name="subscription"
             placeholder="E-mail">
         </label>
-        <button type="submit" class="subscription__button button button--orange">></button>
+        <button class="subscription__button button button--orange">></button>
       </form>
     </section>
     <footer class="footer">
