--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
         <p class="title__heading-bottom">художнiй<br>музей</p>
         <div class="title__ticket-bottom ticket">
           квитки
-          <button type="submit" class="title__button button">></button>
+          <button class="title__button button">></button>
         </div>
       </div>
     </section>
