--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="icon" href="../src/images/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -84,7 +84,7 @@
         <p class="title__heading-bottom">художнiй<br>музей</p>
         <div class="title__ticket-bottom ticket">
           квитки
-          <button class="title__button button">></button>
+          <button type="button" class="title__button button">></button>
         </div>
       </div>
     </section>
@@ -175,7 +175,7 @@
           alt="....."
         >
       </div>
-      <button type="submit" class="gallery__button button">></button>
+      <button type="button" class="gallery__button button">></button>
     </section>
     <section class="subscription" id="subscription">
       <p class="subscription__heading">Пiдписка</p>
@@ -189,7 +189,7 @@
             name="subscription"
             placeholder="E-mail">
         </label>
-        <button class="subscription__button button button--orange">></button>
+        <button type="submit" class="subscription__button button button--orange">></button>
       </form>
     </section>
     <footer class="footer">
