--- a/src/index.html
+++ b/src/index.html
@@ -11,37 +11,61 @@
   </head>
   <body>
     <header class="header">
-      <img
+      <!-- <img
         src="./images/1200px-Girl_from_Podolye_by_V.Tropinin_(b.png"
         alt="girl from podillya"
         class="header__img-most"
-      >
-      <img
-        src="./images/1359385793.png"
-        alt="boy with paleetra"
-        class="header__img-second"
-      >
-      <nav class="header__nav">
-        <div class="header__visite">
-          <p class="header__work-time">Розклад сьогодні 12:00 - 19:00</p>
-          <p class="header__adress">Адреса:  <br> Київ, вул. М. Грушевського, 6</p>
-        </div>
+      > -->
+
+
+      <nav class="header__nav nav">
         <input
           type="checkbox"
-          id="burger"
-          class="header__toggler"
+          id="toggle"
+          class="nav__toggler"
         >
-        <label for="burger" class="header__chekbutton">
+        <label for="toggle" class="nav__chekbutton">
           <img src="./images/Hamburger_icon.svg" alt="hidden menu">
         </label>
-        <ul>
-          <li>Спланувати візит</li>
-          <li>Виставки та події</li>
-          <li>Колекція</li>
+
+
+        <div class="nav__visite">
+          <p class="nav__work-time">Розклад сьогодні <br> 12:00 - 19:00</p>
+          <p class="nav__adress">Адреса:  <br> Київ, вул. М. Грушевського, 6</p>
+        </div>
+        <ul class="nav__items">
+          <li><a href="#" class="nav__link">Спланувати візит</a></li>
+          <li><a href="#" class="nav__link">Виставки та події</a></li>
+          <li><a href="#" class="nav__link">Колекція</a></li>
         </ul>
+        <div class="nav__buttons">
+          <label for="member" class="nav__member">
+            <a
+              href="#"
+              id="member"
+              class="nav__memmeber-link"
+            >
+              Стати членом
+            </a>
+          </label>
+          <label for="ticket" class="nav__ticket">
+            <a
+              href="https://kontramarka.ua/ru/pages/cash-desks"
+              id="ticket"
+              class="nav__ticket-link"
+            >
+              Купити квіток
+            </a>
+          </label>
+        </div>
+        <img
+          src="./images/1359385793.png"
+          alt="girl from podillya"
+          class="nav__img"
+        >
       </nav>
 
-      <div class="header__language" >
+      <!-- <div class="header__language" >
         <input
           type="checkbox"
           id="language"
@@ -59,34 +83,29 @@
             value="rus"
           >
         </label>
-      </div>
-      <label for="ticket">
-        <a
-          href="https://kontramarka.ua/ru/pages/cash-desks"
-          id="ticket"
-          class="header__ticket"
-        >
-          Купити квіток
-        </a>
-      </label>
-      <label for="member">
-        <a
-          href="#"
-          id="member"
-          class="header__member"
-        >
-          Стати членом
-        </a>
-      </label>
-      <span class="header_org">NAMU</span>
+      </div> -->
+
+
+      <span class="header__org">NAMU</span>
       <div class="header__text text">
         <p class="text__duration-1">10 серпня - 10 листопада</p>
         <p class="text__name-1">Мистецтво</p>
         <p class="text__name-2">ХІХ - ХХ ст.</p>
         <p class="text__about">Внесок українських митців у світову культуру 19-20ст</p>
+        <label for="text__item">
+          <a
+            href="https://kontramarka.ua/ru/pages/cash-desks"
+            id="ticket"
+            class="text__ticket"
+          >
+            Купити квіток
+          </a>
+        </label>
         <p class="text__duration-2">10.08 - 10.10</p>
       </div>
-      <span class="header__picture-name">Дівчина з Поділля  В.Тропінін </span>
+
+      <span class="header__picture-name">Дівчина з Поділля <br>
+        В.Тропінін </span>
     </header>
 
     <section class="exhibition">
@@ -222,11 +241,11 @@
     </section>
 
     <section class="visit-us">
-      <img
+      <!-- <img
         src="./images/к.png"
         alt="woman painted"
         class="visit-us__img"
-      >
+      > -->
       <h1 class="visit-us__title">Сплануйте візит до музею <h1>
       <p class="visit-us__text">
         Оберіть зручний день, зареєструйтесь на події, що цікавлять,
