--- a/src/index.html
+++ b/src/index.html
@@ -39,24 +39,24 @@
           <li><a href="#" class="nav__link">Колекція</a></li>
         </ul>
         <div class="nav__buttons">
-          <label for="member" class="nav__member">
-            <a
-              href="#"
-              id="member"
-              class="nav__memmeber-link"
-            >
-              Стати членом
-            </a>
-          </label>
-          <label for="ticket" class="nav__ticket">
-            <a
-              href="https://kontramarka.ua/ru/pages/cash-desks"
-              id="ticket"
-              class="nav__ticket-link"
-            >
+          <!-- <label for="members" class="nav__member"> -->
+          <a
+            href="#"
+            id="members"
+            class="nav__memmeber-link"
+          >
+            Стати членом
+          </a>
+          <!-- </label> -->
+          <!-- <label for="tickets" class="nav__ticket"> -->
+          <a
+            href="https://kontramarka.ua/ru/pages/cash-desks"
+            id="tickets"
+            class="nav__ticket-link"
+          >
               Купити квіток
-            </a>
-          </label>
+          </a>
+          <!-- </label> -->
         </div>
         <img
           src="./images/1359385793.png"
@@ -92,20 +92,21 @@
         <p class="text__name-1">Мистецтво</p>
         <p class="text__name-2">ХІХ - ХХ ст.</p>
         <p class="text__about">Внесок українських митців у світову культуру 19-20ст</p>
-        <label for="text__item">
-          <a
-            href="https://kontramarka.ua/ru/pages/cash-desks"
-            id="ticket"
-            class="text__ticket"
-          >
-            Купити квіток
-          </a>
-        </label>
+        <!-- <label for="talon" class="text__item"> -->
+        <a
+          href="https://kontramarka.ua/ru/pages/cash-desks"
+          id="talon"
+          class="text__ticket"
+        >
+          Купити квіток
+        </a>
+        <!-- </label> -->
         <p class="text__duration-2">10.08 - 10.10</p>
       </div>
 
       <span class="header__picture-name">Дівчина з Поділля <br>
-        В.Тропінін </span>
+        В.Тропінін
+      </span>
     </header>
 
     <section class="exhibition">
@@ -126,15 +127,15 @@
             Виставковий проект &laquo;Ангели&raquo;
             знакова подія для української культури і водночас наймасштабніший...
           </p>
-          <label for="ticket-1" class="ex-card__item">
-            <a
-              href="#"
-              class="ex-card__link"
-              id="ticket-1"
-            >
-              Купити квіток
-            </a>
-          </label>
+          <!-- <label for="ticket-1" class="ex-card__item"> -->
+          <a
+            href="#"
+            class="ex-card__link"
+            id="ticket-1"
+          >
+            Купити квіток
+          </a>
+          <!-- </label> -->
         </div>
       </div>
 
@@ -153,15 +154,15 @@
             Знакові роботи Алли Горської, Миколи Самошкиша, Федора Кричевського
             та інших митців.
           </p>
-          <label for="ticket-2" class="ex-card__item">
-            <a
-              href="#"
-              class="ex-card__link"
-              id="ticket-2"
-            >
-              Купити квіток
-            </a>
-          </label>
+          <!-- <label for="ticket-2" class="ex-card__item"> -->
+          <a
+            href="#"
+            class="ex-card__link"
+            id="ticket-2"
+          >
+            Купити квіток
+          </a>
+          <!-- </label> -->
         </div>
       </div>
 
@@ -180,15 +181,15 @@
           <p class="ex-card__text">
             Визначні приклади стародавнього українського іконопису та живопису
           </p>
-          <label for="ticket-3" class="ex-card__item">
-            <a
-              href="#"
-              class="ex-card__link"
-              id="ticket-3"
-            >
-             Купити квіток
-            </a>
-          </label>
+          <!-- <label for="ticket-3" class="ex-card__item"> -->
+          <a
+            href="#"
+            class="ex-card__link"
+            id="ticket-3"
+          >
+           Купити квіток
+          </a>
+          <!-- </label> -->
         </div>
       </div>
       <a href="#" class="exhibition__link">Архів виставок</a>
@@ -209,11 +210,11 @@
           </p>
           <a href="#" class="fcard__link">Зареєструватись</a>
         </div>
-          <img
-            src="./images/Rectangle 2.1.png"
-            alt="pavlo gudimov foto"
-            class="fcard__foto"
-          >
+        <img
+          src="./images/Rectangle 2.1.png"
+          alt="pavlo gudimov foto"
+          class="fcard__foto"
+        >
       </div>
 
       <div class="fcard future__card-2">
@@ -246,20 +247,20 @@
         alt="woman painted"
         class="visit-us__img"
       > -->
-      <h1 class="visit-us__title">Сплануйте візит до музею <h1>
+      <h1 class="visit-us__title">Сплануйте візит до музею</h1>
       <p class="visit-us__text">
         Оберіть зручний день, зареєструйтесь на події, що цікавлять,
         купіть квиток заздалегіть, щоб ніщо не завадило вам насолоджуватись  мистецтвом
       </p>
-      <label for="visit-link" class="visit-us__item">
-        <a
-          href="#foo"
-          class="visit-us__link"
-          id="visit-link"
-        >
-          Почати
-        </a>
-      </label>
+      <!-- <label for="visit-link" class="visit-us__item"> -->
+      <a
+        href="#foo"
+        class="visit-us__link"
+        id="visit-link"
+      >
+        Почати
+      </a>
+      <!-- </label> -->
     </section>
 
     <section class="news">
