socials block is active

--- a/src/index.html
+++ b/src/index.html
@@ -200,8 +200,12 @@
           class="logo"
         >
         <div class="footer__socials">
-          <img src="../src/images/Facebook.png" alt="logo facebook">
-          <img src="../src/images/Insta.png" alt="logo instagram">
+          <a href="https://www.facebook.com/namu.museum/">
+            <img src="../src/images/Facebook1.png" alt="logo facebook">
+          </a>
+          <a href="https://twitter.com/NAMU_art">
+            <img src="../src/images/twitter.png" alt="logo instagram">
+          </a>
         </div>
       </div>
       <div class="footer__schedule">
