add active contacts, change hover time for nav

--- a/src/index.html
+++ b/src/index.html
@@ -226,10 +226,16 @@
       <div class="footer__contacts">
         <p class="footer__heading" id="contacts">Контакти:</p>
         <p class="footer__info">
-          вул. М. Грушевського, 6; Київ, 01001
-          тел. +38 (044) 278-13-57
+          <a href="https://goo-gl.su/PyYJ">
+            вул. М. Грушевського, 6; Київ, 01001
+          </a>
+          <a href="tel:+380442781357">
+            тел. +38 (044) 278-13-57
+          </a>
           факс +38 (044) 278-74-54
-          e-mail: info@namu.kiev.ua
+          <a href="mailto:info@namu.kiev.ua">
+            e-mail: info@namu.kiev.ua
+          </a>
         </p>
       </div>
       <nav class="footer__nav">
