fix footer info

--- a/src/index.html
+++ b/src/index.html
@@ -226,14 +226,17 @@
       <div class="footer__contacts">
         <p class="footer__heading" id="contacts">Контакти:</p>
         <p class="footer__info">
-          <a href="https://goo-gl.su/PyYJ">
+          <a class="footer__info-link" href="https://goo-gl.su/PyYJ">
             вул. М. Грушевського, 6; Київ, 01001
           </a>
-          <a href="tel:+380442781357">
+          <br>
+          <a class="footer__info-link" href="tel:+380442781357">
             тел. +38 (044) 278-13-57
           </a>
-          факс +38 (044) 278-74-54
-          <a href="mailto:info@namu.kiev.ua">
+          <br>
+            факс +38 (044) 278-74-54
+          <br>
+          <a class="footer__info-link" href="mailto:info@namu.kiev.ua">
             e-mail: info@namu.kiev.ua
           </a>
         </p>
