add script for close burber menu

--- a/src/index.html
+++ b/src/index.html
@@ -226,7 +226,7 @@
       <div class="footer__contacts">
         <p class="footer__heading" id="contacts">Контакти:</p>
         <p class="footer__info">
-          <a class="footer__info-link" href="https://goo-gl.su/PyYJ">
+          <a class="footer__info-link" href="https://www.google.com/maps?q=%D0%B2%D1%83%D0%BB.+%D0%9C.+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6;+%D0%9A%D0%B8%D1%97%D0%B2,&um=1&ie=UTF-8&sa=X&ved=2ahUKEwiht93Rp_brAhWIxIsKHdj2A0QQ_AUoAXoECBAQAw">
             вул. М. Грушевського, 6; Київ, 01001
           </a>
           <br>
@@ -288,5 +288,13 @@
         </ul>
       </nav>
     </footer>
+
+    <script type="text/javascript">
+      document.querySelector(".nav__list").onclick = () => {
+        document.querySelector(".nav__toggler").checked = false;
+      }
+    </script>
+
   </body>
 </html>
+
