--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,7 @@
     <link rel="favicon" href="./images/favicon/favicon.ico">
   </head>
   <body>
-    <header class="header">
-      <!-- <img
-        src="./images/1200px-Girl_from_Podolye_by_V.Tropinin_(b.png"
-        alt="girl from podillya"
-        class="header__img-most"
-      > -->
-
-
+    <header class="header" id="header">
       <nav class="header__nav nav">
         <input
           type="checkbox"
@@ -25,13 +18,13 @@
           class="nav__toggler"
         >
         <label for="toggle" class="nav__chekbutton">
-          <img src="./images/Hamburger_icon.svg" alt="hidden menu">
+          <span class="nav__burger" id="toggle"></span>
         </label>
-
-
         <div class="nav__visite">
-          <p class="nav__work-time">Розклад сьогодні <br> 12:00 - 19:00</p>
-          <p class="nav__adress">Адреса:  <br> Київ, вул. М. Грушевського, 6</p>
+          <span class="nav__work-title-1">Розклад сьогодні:</span>
+          <span class="nav__work-title-2">Адреса:</span>
+          <span class="nav__work-info">12:00 - 19:00</span>
+          <span class="nav__work-info">Київ, вул. М. Грушевського, 6</span>
         </div>
         <ul class="nav__items">
           <li><a href="#" class="nav__link">Спланувати візит</a></li>
@@ -39,24 +32,20 @@
           <li><a href="#" class="nav__link">Колекція</a></li>
         </ul>
         <div class="nav__buttons">
-          <!-- <label for="members" class="nav__member"> -->
           <a
             href="#"
             id="members"
-            class="nav__memmeber-link"
+            class="nav__member-link"
           >
             Стати членом
           </a>
-          <!-- </label> -->
-          <!-- <label for="tickets" class="nav__ticket"> -->
-          <a
+           <a
             href="https://kontramarka.ua/ru/pages/cash-desks"
             id="tickets"
             class="nav__ticket-link"
           >
               Купити квіток
           </a>
-          <!-- </label> -->
         </div>
         <img
           src="./images/1359385793.png"
@@ -65,26 +54,14 @@
         >
       </nav>
 
-      <!-- <div class="header__language" >
-        <input
-          type="checkbox"
-          id="language"
-          class="header__lan-check"
-        >
-        <label for="language" class="header__lang-label">
-          <input
-            type="button"
-            class="header__lang-ukr"
-            value="ua"
-          >
-          <input
-            type="button"
-            class="header__lang-rus"
-            value="rus"
-          >
-        </label>
-      </div> -->
-
+      <select
+        name="language"
+        id="lang"
+        class="header__language"
+      >
+        <option value="UA">UA</option>
+        <option value="ENG">ENG</option>
+      </select>
 
       <span class="header__org">NAMU</span>
       <div class="header__text text">
@@ -92,7 +69,6 @@
         <p class="text__name-1">Мистецтво</p>
         <p class="text__name-2">ХІХ - ХХ ст.</p>
         <p class="text__about">Внесок українських митців у світову культуру 19-20ст</p>
-        <!-- <label for="talon" class="text__item"> -->
         <a
           href="https://kontramarka.ua/ru/pages/cash-desks"
           id="talon"
@@ -100,9 +76,14 @@
         >
           Купити квіток
         </a>
-        <!-- </label> -->
         <p class="text__duration-2">10.08 - 10.10</p>
       </div>
+
+      <img
+        src="./images/1200px-Girl_from_Podolye_by_V.Tropinin_(b.png"
+        alt="girl picture"
+        class="header__image"
+      >
 
       <span class="header__picture-name">Дівчина з Поділля <br>
         В.Тропінін
@@ -124,10 +105,9 @@
           <h2 class="ex-card__date ex-card__date--1">11.07 - 22.09</h2>
           <h3 class="ex-card__title">Кураторська виставка "Ангели"</h3>
           <p class="ex-card__text">
-            Виставковий проект &laquo;Ангели&raquo;
+            Виставковий проект &laquo;Ангели&raquo; -
             знакова подія для української культури і водночас наймасштабніший...
           </p>
-          <!-- <label for="ticket-1" class="ex-card__item"> -->
           <a
             href="#"
             class="ex-card__link"
@@ -135,7 +115,6 @@
           >
             Купити квіток
           </a>
-          <!-- </label> -->
         </div>
       </div>
 
@@ -154,7 +133,6 @@
             Знакові роботи Алли Горської, Миколи Самошкиша, Федора Кричевського
             та інших митців.
           </p>
-          <!-- <label for="ticket-2" class="ex-card__item"> -->
           <a
             href="#"
             class="ex-card__link"
@@ -162,7 +140,6 @@
           >
             Купити квіток
           </a>
-          <!-- </label> -->
         </div>
       </div>
 
@@ -181,7 +158,6 @@
           <p class="ex-card__text">
             Визначні приклади стародавнього українського іконопису та живопису
           </p>
-          <!-- <label for="ticket-3" class="ex-card__item"> -->
           <a
             href="#"
             class="ex-card__link"
@@ -189,7 +165,6 @@
           >
            Купити квіток
           </a>
-          <!-- </label> -->
         </div>
       </div>
       <a href="#" class="exhibition__link">Архів виставок</a>
@@ -242,17 +217,16 @@
     </section>
 
     <section class="visit-us">
-      <!-- <img
+      <img
         src="./images/к.png"
         alt="woman painted"
         class="visit-us__img"
-      > -->
+      >
       <h1 class="visit-us__title">Сплануйте візит до музею</h1>
       <p class="visit-us__text">
         Оберіть зручний день, зареєструйтесь на події, що цікавлять,
         купіть квиток заздалегіть, щоб ніщо не завадило вам насолоджуватись  мистецтвом
       </p>
-      <!-- <label for="visit-link" class="visit-us__item"> -->
       <a
         href="#foo"
         class="visit-us__link"
@@ -260,7 +234,6 @@
       >
         Почати
       </a>
-      <!-- </label> -->
     </section>
 
     <section class="news">
@@ -273,7 +246,7 @@
             class="news-card__image"
           >
           <span  class="news-card__date">9 серпня 2019</span>
-          <span class="news-card__title"><strong>Оголошення переможця</strong> </span>
+          <span class="news-card__title"><strong class="news-card__title">Оголошення переможця</strong> </span>
           <p class="news-card__text">
             Друзі, сьогодні п'ятниця! А це означає, що час
             оголосити  переможця розіграшу...
@@ -286,7 +259,7 @@
             class="news-card__image"
           >
           <span class="news-card__date">9 серпня 2019</span>
-          <span class="news-card__title"><strong>Міжнародний день котів</strong> </span>
+          <span class="news-card__title"><strong class="news-card__title">Міжнародний день котів</strong> </span>
           <p class="news-card__text">
             Музей з левами не може просто так взяти і
             пропустити Міжнародний день котів!
@@ -299,7 +272,7 @@
             class="news-card__image"
           >
           <span  class="news-card__date">9 серпня 2019</span>
-          <span class="news-card__title"><strong>200 років П. Кулішу</strong> </span>
+          <span class="news-card__title"><strong class="news-card__title">200 років П. Кулішу</strong> </span>
           <p class="news-card__text">
             Поруч із тарасом Шевченком це наважливіша постать
             в українській культурі ХІХ століття...
@@ -333,6 +306,7 @@
     </section>
 
     <footer class="footer" id="foo">
+      <a href="#header" class="footer__arrow">|</a>
       <div class="contacts">
         <h2 class="contacts__title">Контакти</h2>
         <span class="contacts__adress">
