--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
           class="nav__toggler"
         >
         <label for="toggle" class="nav__chekbutton">
-          <span class="nav__burger" id="toggle"></span>
+          <span class="nav__burger"></span>
         </label>
         <div class="nav__visite">
           <span class="nav__work-title-1">Розклад сьогодні:</span>
@@ -39,7 +39,7 @@
           >
             Стати членом
           </a>
-           <a
+          <a
             href="https://kontramarka.ua/ru/pages/cash-desks"
             id="tickets"
             class="nav__ticket-link"
