--- a/src/index.html
+++ b/src/index.html
@@ -9,124 +9,141 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;800&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body class="page">
     <header class="header">
-      <nav class="header__nav nav">
+      <nav class="header__nav">
         <input
           type="checkbox"
-          class="nav__toggler"
-          id="nav-toggler"
+          class="header__toggler"
+          id="header-toggler"
         >
-        <label class="nav__toggler-label" for="nav-toggler"></label>
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a class="nav__link" href="#gallery">
+        <label class="header__toggler-label" for="header-toggler"></label>
+        <ul class="header__list">
+          <li class="header__item">
+            <a class="header__link" href="#gallery">
               Галерея
             </a>
           </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#events">
+          <li class="header__item">
+            <a class="header__link" href="#events">
               Виставки та події
             </a>
           </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#lecture">
+          <li class="header__item">
+            <a class="header__link" href="#lecture">
               Відвідування
             </a>
           </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#subscription">
+          <li class="header__item">
+            <a class="header__link" href="#subscription">
               Стати нашим другом
             </a>
           </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#">
+          <li class="header__item">
+            <a class="header__link" href="#">
               Про Нас
             </a>
           </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#">
+          <li class="header__item">
+            <a class="header__link" href="#">
               Магазин
             </a>
           </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#">
+          <li class="header__item">
+            <a class="header__link" href="#">
               Блог
             </a>
           </li>
-          <li class="nav__item">
-            <a class="nav__link" href="#contacts">
+          <li class="header__item">
+            <a class="header__link" href="#contacts">
               Контакти
             </a>
           </li>
         </ul>
       </nav>
     </header>
+
     <section class="title" id="title">
       <div class="title__logo logo"></div>
-      <p class="title__heading">худож<span class="title__heading--opacity">ній</span><br>музей</p>
+      <h1 class="title__heading">
+        худож<span class="title__heading--opacity">ній</span><br>музей
+      </h1>
       <img
         class="title__img"
         src="../src/images/titlebig.jpg"
-        alt="...."
+        alt="Головний вхід в Національний музей"
       >
       <img
         class="title__img-mid"
         src="../src/images/titlemid.jpg"
-        alt="...."
+        alt="Головний вхід в Національний музей"
       >
-      <div class="title__ticket ticket">
+      <div class="title__ticket">
         квитки
         <button type="submit" class="title__button button">></button>
       </div>
-      <p class="title__mark mark">події</p>
+      <p class="title__mark">події</p>
       <div class="title__bottom">
-        <p class="title__heading-bottom">художнiй<br>музей</p>
-        <div class="title__ticket-bottom ticket">
+        <h1 class="title__heading-bottom">художнiй<br>музей</h1>
+        <div class="title__ticket-bottom">
           квитки
           <button type="button" class="title__button button">></button>
         </div>
       </div>
     </section>
+
     <section class="events" id="events">
-      <div class="events__title heading-section">Актуальні події</div>
+      <h2 class="events__title heading-section">Актуальні події</h2>
       <section class="events__element">
         <img
           class="events__img"
           src="images/events/1.jpg"
-          alt="картина пейзаж"
+          alt="Зображення морського пейзажу, намальвоного з високогір'я"
         >
         <img
           class="events__img--hidden"
           src="images/events/1big.jpg"
-          alt="картина пейзаж"
+          alt="Зображення морського пейзажу, намальвоного з високогір'я"
         >
         <div class="events__info">
-          <div class="events__mark mark">виставка</div>
+          <span class="events__mark">виставка</span>
           <div class="events__date date">26.08-29.11.2019</div>
-          <p class="events__heading">Йду і повертаюсь</p>
-          <p class="events__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+          <h3 class="events__heading">Йду і повертаюсь</h3>
+          <p class="events__text">
+
+            Національний Художній Музей України презентує унікальну частину колекції Градобанку
+            - українське мистецтво другої половини 1980-1995 років.
+
+          </p>
         </div>
       </section>
+
       <section class="events__element">
         <div class="events__info">
-          <div class="events__mark mark">виставка</div>
+          <span class="events__mark">виставка</span>
           <div class="events__date date">26.08-29.11.2019</div>
-          <p class="events__heading">І спогади і мрії</p>
-          <p class="events__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+          <h3 class="events__heading">І спогади і мрії</h3>
+          <p class="events__text">
+
+            Національний художній музей України до 100 річчя від дня народження
+            видатної української художниці Тетяни Яблонської
+            відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+
+          </p>
         </div>
         <img
           class="events__img"
           src="images/events/2.jpg"
-          alt="картина дiвчинa з павлiном"
+          alt="Картина дiвчинa з павлiном"
         >
         <img
           class="events__img--hidden"
           src="images/events/2big.jpg"
-          alt="картина пейзаж"
+          alt="Картина дiвчинa з павлiном"
         >
       </section>
     </section>
+
     <section class="lecture" id="lecture">
       <img
         src="../src/images/lecture.jpg"
@@ -134,51 +151,56 @@
         class="lecture__img"
       >
       <div class="lecture__anons">
-        <div class="lecture__mark mark">лекцiя</div>
+        <span class="lecture__mark">лекцiя</span>
         <div class="lecture__date date">26/08/2019-11:00</div>
-        <p class="lecture__heading">Від класицизму до романтизму</p>
+        <h3 class="lecture__heading">Від класицизму до романтизму</h3>
       </div>
     </section>
+
     <section class="gallery" id="gallery">
-      <div class="gallery__title">Галерея</div>
+      <h2 class="gallery__title">Галерея</h2>
       <div class="gallery__picture-top">
         <img
           class="gallery__img"
           src="../src/images/gallery/1.jpg"
-          alt="....."
+          alt="Зображення жінок в національному вбранні"
         >
         <img
           class="gallery__img"
           src="../src/images/gallery/2.jpg"
-          alt="....."
+          alt="Зображення будинку в зимню пору з конною упряжкоюб що проїжджає неподалік"
         >
         <img
           class="gallery__img gallery__img--hidden"
           src="../src/images/gallery/2.1.jpg"
-          alt="....."
+          alt="Зображення гусейб що йдуть стежкою"
         >
       </div>
       <div class="gallery__picture-bottom">
         <img
           class="gallery__img"
           src="../src/images/gallery/3.jpg"
-          alt="....."
+          alt="Зображення дівчини що відпочиває на лавочці в парку літню пору"
         >
         <img
           class="gallery__img"
           src="../src/images/gallery/4.jpg"
-          alt="......."
+          alt="Зображення морського пейзажу на заході сонця"
         >
         <img
           class="gallery__img gallery__img--hidden"
           src="../src/images/gallery/4.1.jpg"
-          alt="....."
+          alt="
+            Зображення гурту людей в сільській місцевості,
+            де увага всіх прикута до розмови двух чоловіків похилого
+            та середнього віку"
         >
       </div>
       <button type="button" class="gallery__button button">></button>
     </section>
+
     <section class="subscription" id="subscription">
-      <p class="subscription__heading">Пiдписка</p>
+      <h2 class="subscription__heading">Пiдписка</h2>
       <p class="subscription__info">Бути в курсі всіх актуальних подій та останніх новин.</p>
       <form class="subscription__form">
         <label for="email">
@@ -187,11 +209,14 @@
             class="subscription__input"
             id="email"
             name="subscription"
-            placeholder="E-mail">
+            placeholder="E-mail"
+            required
+          >
         </label>
         <button type="submit" class="subscription__button button button--orange">></button>
       </form>
     </section>
+
     <footer class="footer">
       <div class="footer__logo">
         <img
@@ -226,7 +251,9 @@
       <div class="footer__contacts">
         <p class="footer__heading" id="contacts">Контакти:</p>
         <p class="footer__info">
-          <a class="footer__info-link" href="https://www.google.com/maps?q=%D0%B2%D1%83%D0%BB.+%D0%9C.+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6;+%D0%9A%D0%B8%D1%97%D0%B2,&um=1&ie=UTF-8&sa=X&ved=2ahUKEwiht93Rp_brAhWIxIsKHdj2A0QQ_AUoAXoECBAQAw">
+          <a
+            class="footer__info-link"
+            href="https://www.google.com/maps?q=%D0%B2%D1%83%D0%BB.+%D0%9C.+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6;+%D0%9A%D0%B8%D1%97%D0%B2,&um=1&ie=UTF-8&sa=X&ved=2ahUKEwiht93Rp_brAhWIxIsKHdj2A0QQ_AUoAXoECBAQAw">
             вул. М. Грушевського, 6; Київ, 01001
           </a>
           <br>
@@ -241,6 +268,7 @@
           </a>
         </p>
       </div>
+
       <nav class="footer__nav">
         <ul class="footer__list">
           <li class="footer__item">
@@ -288,13 +316,7 @@
         </ul>
       </nav>
     </footer>
-
-    <script type="text/javascript">
-      document.querySelector(".nav__list").onclick = () => {
-        document.querySelector(".nav__toggler").checked = false;
-      }
-    </script>
-
+    <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
 
